--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <main id="main">
-      <h1 id="clock">Time is relative</h1>
+      <h1 id="clock" class="noselect">Time is relative</h1>
     </main>
   </body>
   <script src="main.js"></script>
