added Changable font-color

--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
   </head>
   <body>
     <main id="main">
-      <h1 id="clock" class="noselect">Time is relative</h1>
+      <input type="color" id="color-picker" />
+      <div id="text-to-change">
+        <h1 id="clock" class="noselect">Time is relative</h1>
+      </div>
     </main>
   </body>
   <script src="main.js"></script>
