added font size picker

--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
   <body>
     <main id="main">
       <input type="color" id="color-picker" />
+      <input type="range" id="font-size" min="12" max="72" value="16" />
       <div id="text-to-change">
-        <h1 id="clock" class="noselect">Time is relative</h1>
+        <div id="text">
+          <h1 id="clock" class="noselect">Time is relative</h1>
+        </div>
       </div>
     </main>
   </body>
