--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div id="text-to-change">
         <div id="text">
           <h1 id="clock" class="noselect">Time is relative</h1>
+          <button id="light-mode">Toggle Light Mode</button>
         </div>
       </div>
     </main>
