added no functional button for day/night themes

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>Clock</title>
   </head>
   <body>
     <main id="main">
@@ -14,9 +14,10 @@
       <div id="text-to-change">
         <div id="text">
           <h1 id="clock" class="noselect">Time is relative</h1>
-          <button id="light-mode">Toggle Light Mode</button>
         </div>
       </div>
+      <input type="checkbox" id="darkmode-toggle" />
+      <label for="darkmode-toggle"></label>
     </main>
   </body>
   <script src="main.js"></script>
