made day/night button functional

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
           <h1 id="clock" class="noselect">Time is relative</h1>
         </div>
       </div>
-      <input type="checkbox" id="darkmode-toggle" />
+      <input type="checkbox" id="darkmode-toggle" onclick="switchColors()" />
       <label for="darkmode-toggle"></label>
     </main>
   </body>
