added temporary instructions for menu

--- a/index.html
+++ b/index.html
@@ -13,16 +13,20 @@
         <h1 id="clock" class="noselect">Time is relative</h1>
       </div>
     </main>
+    <p class="instruction-message noselect">
+      Hover to show/hide options<br />
+      | <br />
+      v
+    </p>
 
     <footer>
-      <div class="inline">
+      <div class="inline footer-options">
         <input type="color" id="color-picker" />
         <input type="range" id="font-size" min="24" max="206" value="120" />
         <input type="checkbox" id="darkmode-toggle" onclick="switchColors()" />
         <label class="toggle-button" for="darkmode-toggle"></label>
       </div>
     </footer>
-
     <script src="main.js"></script>
   </body>
 </html>
